# QT-DICOM

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp
.cursor/rules/: js.mdc
